              need to copy a tableaux, the copy constructor remains available
              (and move assignment is still available also).
        Class NativeInteger<bytes>:
            - The constructor that takes an Integer or LargeInteger is now
              deprecated.  Instead, you should initialise this using either
              safeValue() or unsafeValue() from Integer / LargeInteger.
        Struct NoSuchType:
            - A new declared-but-not-defined type that can be used as a
              placeholder to avoid compile errors.
        Class PermClass<n>:
            - Everything in this class is now constexpr.
        Class Polynomial<T>:
            - For the iterator-based constructor and init() routine, the
              iterator type is now required to be random access.
        Class Primes:
            - The python-only routines primeDecompInt() and
              primePowerDecompInt() are now just overloads for primeDecomp()
              and primePowerDecomp().  The old names are kept but deprecated.
        Class RingTraits:
            - Provides new compile-time constants zeroInitialised and
              zeroDivisors.
        Struct TriangulationTraits<dim>:
            - New traits type to help with generic code for working with
              triangulations of different dimensions.
        Class Vector<T>:
            - For the iterator-based constructor, the old recommendation that
              the iterator type be random access is now a hard requirement.
        Function isTriangulation():
            - New function that converts a packet type constant into a
              triangulation dimension.
        Function subscript(), superscript():
            - When passing one of Regina's integer types, there is now a
              precondition that the given value is not infinity.
        Function supportedDim():
            - New function to indicate which dimensions of triangulation are