@@ -115,6 +115,10 @@ Version 7.5  [ TODO ]
             - The constructor that takes an Integer or LargeInteger is now
               deprecated.  Instead, you should initialise this using either
               safeValue() or unsafeValue() from Integer / LargeInteger.
+        Class NormalSurface:
+            - Routine countBoundaries() now throws an exception if the normal
+              arc counts on the boundary are so large that they cannot fit
+              into a size_t.
         Struct NoSuchType:
             - A new declared-but-not-defined type that can be used as a
               placeholder to avoid compile errors.
